[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv Data Cleaning Reinforcement Learning Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.103.2",
    "uvicorn[standard]==0.23.2",
    "pydantic==2.4.2",
    "pandas==2.1.1",
    "numpy==1.26.0",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "openai>=1.0.0",
]

[project.scripts]
inference = "inference:main"
