[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv Data Cleaning Reinforcement Learning Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pandas",
    "numpy",
    "python-multipart",
    "pyyaml",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
inference = "inference:main"
server = "server.app:main"
